--- a/client/src/nav/nav.scss
+++ b/client/src/nav/nav.scss
@@ -12,6 +12,11 @@
         a {
             margin-right: 10px;
             text-decoration: none;
+            color: #444241 
+        }
+
+        a:hover {
+            color: black
         }
     }
 }
