added about page

--- a/client/src/nav/nav.scss
+++ b/client/src/nav/nav.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 20px 40px 0px 40px;
 
     h1 {
 
@@ -10,7 +10,7 @@
 
     ul {
         a {
-            margin-right: 10px;
+            margin-right: 20px;
             text-decoration: none;
             color: #444241 
         }
