--- a/client/src/about/about.scss
+++ b/client/src/about/about.scss
@@ -37,6 +37,10 @@
             text-align: left;
             padding: 20px 30px 20px 30px;
         }
+
+        .ask {
+            color: #F6F39B;
+        }
     }
 
 }
